Cambios en diseño, botón de salir y ayuda

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PuntoDeVentaJAVA
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-8.2.2.jre8.jar=mssql-jdbc-8.2.2.jre8.jar
+file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\Users\\carog\\Desktop\\mssql-jdbc-8.2.2.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
