--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PuntoDeVentaJAVA
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-8.2.0.jre8.jar=lib\\mssql-jdbc-8.2.0.jre8.jar
 file.reference.mssql-jdbc-8.2.2.jre8.jar=mssql-jdbc-8.2.2.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-8.2.2.jre8.jar}
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar}:\
+    ${file.reference.mssql-jdbc-8.2.0.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
